objects/BMCServiceDesk__Action__c.object
<CustomObject>
    <description>Actions are pre-defined activities associated with an Incident, Task or BroadCast that record the details of the support process</description>
    <fields>
        <fullName>BMCServiceDesk__Abbreviation__c</fullName>
        <inlineHelpText>Use this field to enter a short label that you want to assign to the action. When you create charts or reports, you can represent an action record by displaying this field in the chart or report.</inlineHelpText>
        <label>Abbreviation</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AppliesToPreventiveMaintenance__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applies to Preventive Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Display_In_SelfService__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this field if you want this action to be visible to the client when they use the Self Service portal.</inlineHelpText>
        <label>Display In SelfService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HideDuration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to hide the Duration field on the Action form</description>
        <inlineHelpText>Select to hide the Duration field on the Action form</inlineHelpText>
        <label>Hide Duration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToBroadcasts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be accessed and assigned when you add a broadcast supporting information record to a broadcast.</inlineHelpText>
        <label>Applies to Broadcasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToChange__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be  accessed and assigned when you add a Change Request.</inlineHelpText>
        <label>Applies to Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToConfigurationItems__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applies to Configuration Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToIncident__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be accessed and assigned when you add an incident supporting information record to an incident.</inlineHelpText>
        <label>Applies to Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToProblem__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be accessed and assigned when you add a Problem.</inlineHelpText>
        <label>Applies to Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToPurchasing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applies to Purchasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToRelease__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applies to Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToSLA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be accessed and assigned when you add an SLA supporting information record to an SLA.</inlineHelpText>
        <label>Applies to SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToServiceUnavailability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to display the current action as one of the actions that can be assigned to a Service Outage record.</inlineHelpText>
        <label>Applies to Service Outage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToTask__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this field if you want to designate the current action as one of the default actions that can be accessed and assigned when you add a task supporting information record to a task.</inlineHelpText>
        <label>Applies to Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__autoModify__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to modify the Description field whenever you assign the current action to an incident, broadcast, task, or configuration item.</inlineHelpText>
        <label>Enable Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>States whether this object is Inactive or active</description>
        <inlineHelpText>Select this field if the action record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__instruction__c</fullName>
        <label>Instruction</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__note__c</fullName>
        <description>Note Regarding Object</description>
        <inlineHelpText>Note Regarding Object</inlineHelpText>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__picture__c</fullName>
        <label>Picture</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__trackTime__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to track and record the amount of time it takes to complete the current action. The time is recorded in the Duration column of the supporting information record assigned to the current action.</inlineHelpText>
        <label>Track Time</label>
        <type>Checkbox</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__Test</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Test</label>
    </listViews>
    <nameField>
        <label>Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Action_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
        <errorMessage>Please enter value in Action field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__UniqueActionIDCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Action__c.Fields.Name , $ObjectType.BMCServiceDesk__Action__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__Action__c.Fields.Name , $ObjectType.BMCServiceDesk__Action__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
        <errorMessage>An action record with this Action already exists. Enter a unique Action.</errorMessage>
    </validationRules>
</CustomObject>